fix double border issue (#1128)

--- a/src/app/components/NetworkRibbon/_networkRibbon.scss
+++ b/src/app/components/NetworkRibbon/_networkRibbon.scss
@@ -20,11 +20,3 @@
   text-decoration: underline;
   width: 35%;
 }
-.logo {
-  width: 160px;
-  height: 160px;
-  background-color: #2d2d2d;
-  border-radius: 10%;
-  border-width: 5px;
-  border-color: white;
-}
